Refactor: 아이템 조회 로직 리팩토링